# contacts-sync

./: .gitignore  LICENSE  README.md  build.ps1  contacts-sync.spec  pyinstaller_entry.py  pyproject.toml
contacts_sync/: cli.py  db.py  http_retry.py  matcher.py  merger.py  models.py  names.py  paths.py  sync_engine.py
contacts_sync/adapters/: base.py  google.py  icloud.py  microsoft.py
contacts_sync/auth/: env_store.py  google_auth.py  icloud_auth.py  microsoft_auth.py  onepassword.py
docs/superpowers/plans/: 2026-07-01-contacts-sync.md  2026-07-04-photo-sync.md
docs/superpowers/specs/: 2026-07-01-contacts-sync-design.md  2026-07-03-clean-resync-design.md  2026-07-04-photo-sync-design.md
tests/: test_adapter_base.py  test_cli.py  test_cli_review_status_doctor.py  test_cli_sync.py  test_db.py  test_env_store.py  test_google_adapter.py  test_google_auth.py  test_http_retry.py  test_icloud_adapter.py  test_icloud_auth.py  test_matcher.py  test_merger.py  test_microsoft_adapter.py  test_microsoft_auth.py  test_models.py  test_names.py  test_onepassword.py  test_sync_engine.py  test_sync_engine_logging.py
