[project]
name = "contacts-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "google-api-python-client>=2.140",
    "google-auth-oauthlib>=1.2",
    "msal>=1.30",
    "requests>=2.32",
    "vobject>=0.9.7",
    "defusedxml>=0.7.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "requests-mock>=1.12"]

[project.scripts]
contacts-sync = "contacts_sync.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
